fix(difficulty headline): change color to satisfy contrast standards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,12 +87,13 @@ td:focus{
 
 .difficulty-headline{
     font-size: 19px;
-    color: gray;
+    color: #545454;
     margin-top: 86px;
     display: inline-block;
 }
 .fas{
     margin-left:5px;
+    color: gray;
 }
 .fa-minus{
     display: none;
